# clash-control

./: CHANGELOG.md  CLAUDE.md  FEATURE_RESEARCH.md  INTERNALS.md  LICENSE  LOCAL_ENGINE_GUIDE.md  MCP_BUILD_GUIDE.md  MEMORY.md  OPEN_SOURCE_COMPONENTS.md  PERFORMANCE_NOTES.md  README.md  REVIT_ADDIN_GUIDE.md  REVIT_BRIDGE_GUIDE.md  index.html  manifest.json  mcp-server.js  package.json  smart-bridge-server.js  sw.js  vercel.json  version.json
.github/workflows/: daily-sync.yml  release-smart-bridge.yml  version-bump.yml
addons/: claude-bridge.js  data-quality.js  ifc-sidecar.js  local-engine.js  pwa.js  revit-bridge.js  shared-project.js  smart-bridge.js  wasm-engine.js
api/: _lib.js  health.js  nl.js  project.js  schema.sql  title.js  training.js
clashcontrol-engine/: .gitignore  LICENSE  README.md  pyproject.toml
clashcontrol-engine/src/clashcontrol_engine/: __init__.py  __main__.py  cli.py  engine.py  intersection.py  server.py  sweep.py
clashcontrol-engine/tests/: test_engine.py
docs/: index.html
engine/: Cargo.toml
engine/src/: bvh.rs  lib.rs  spatial_hash.rs  tri_tri.rs
exporters/revit/: SPEC.md
importers/archicad/: SPEC.md
importers/revit/: CC_LOADER_GUIDE.md  SPEC.md
importers/tekla/: SPEC.md
marketing/: campaign-brief.md
marketing/content/: blog-post-1.md  blog-post-topics.md  email-newsletter.md  linkedin-posts.md  press-release.md  social-posts.md
mcp-server/: index.js  package-lock.json  package.json  rest-bridge.js  smart-bridge.js
scripts/: build-wasm-engine.sh  bump-version.sh  generate-sri.js  release-smart-bridge.sh  test-wasm-engine.sh  update-memory.py
