[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clashcontrol-engine"
version = "0.1.0"
description = "Local clash detection server for ClashControl — multi-threaded exact mesh intersection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "ClashControl", email = "hello@clashcontrol.io" },
]
keywords = ["ifc", "clash-detection", "bim", "construction", "aec"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "websockets>=12.0",
]

[project.optional-dependencies]
fast = ["scipy>=1.11"]

[project.scripts]
clashcontrol-engine = "clashcontrol_engine.cli:main"

[project.urls]
Homepage = "https://clashcontrol.io"
Repository = "https://github.com/clashcontrol-io/clashcontrol"

[tool.hatch.build.targets.wheel]
packages = ["src/clashcontrol_engine"]
