[package]
name = "clashcontrol-engine"
version = "0.1.0"
edition = "2021"
description = "WASM clash detection engine for ClashControl — BVH-accelerated mesh intersection + distance queries"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

# No heavy deps — custom BVH, Moller tri-tri, and spatial hash are implemented
# inline for minimal WASM binary size. parry3d can be added later for advanced
# queries (penetration depth, GJK, contact manifolds) if needed.

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "z"       # optimize for size
codegen-units = 1     # slower compile, smaller binary
strip = true
